# mica-shell

./: CMakeLists.txt  README.md  Taskbar.kdev4
.kdev4/: Taskbar.kdev4
src/: SideBar.qml  kicker.qml  kickermenu.cpp  kickermenu.h  main.cpp  resources.qrc  taskbar.cpp  taskbar.h  taskbar.qml
